--- a/themes/bix/sass/_highlight-modal.scss
+++ b/themes/bix/sass/_highlight-modal.scss
@@ -28,7 +28,7 @@
     .comment-modal {
         display: none;
         position: absolute;
-        background: $color__orange;
+        background: $color__blue;
         width: 80%;
         height: 80%;
     }
@@ -36,7 +36,7 @@
     .download-modal {
         display: none;
         position: absolute;
-        background: $color__orange;
+        background: $color__gray;
         width: 80%;
         height: 80%;
     }
