--- a/themes/bix/sass/style.scss
+++ b/themes/bix/sass/style.scss
@@ -76,4 +76,4 @@ Nicolas Gallagher and Jonathan Neal http://necolas.github.com/normalize.css/
 @import "front-sections/front-model";
 @import "error-page";
 @import "thank-you-modal";
-@import "highlight-modal";
+@import "modal";
