--- a/themes/bix/style.css
+++ b/themes/bix/style.css
@@ -923,8 +923,7 @@ object {
       align-items: center; }
 
 .site-main {
-  width: 100%;
-  height: 100%; }
+  width: 100%; }
 
 @media (min-width: 600px) {
   .container {
@@ -3029,9 +3028,6 @@ strong {
     border: solid #70b3cb 2px;
     background-color: #fff; }
 
-<<<<<<< HEAD
-.single-story-modal-overlay {
-=======
 .thank-you-title {
   width: 100%;
   text-align: center;
@@ -3133,7 +3129,46 @@ strong {
   transform: scale(0.97); }
 
 .thank-you-modal input {
->>>>>>> a0fce80cc0a059c3ec38d57a56e1c1387e74c7fd
+  display: none;
+  position: absolute;
+  top: -1000px; }
+
+.thank-you-modal__overlay {
+  opacity: 0;
+  transform: scale(1);
+  transition: all 0.75s cubic-bezier(0.68, -0.55, 0.265, 1.55);
+  z-index: -100; }
+
+.thank-you-modal input:checked ~ .thank-you-modal__overlay {
+  opacity: 1;
+  transform: scale(1);
+  z-index: 800; }
+
+.thank-you-modal__trigger {
+  display: none; }
+
+.thank-you-modal-button {
+  padding: 10px;
+  margin-top: 10px;
+  color: #fff;
+  text-decoration: none;
+  border: solid #fff 2px;
+  border-radius: 30px;
+  background-color: #70b3cb;
+  font-weight: 500;
+  font-size: 1.1rem;
+  box-shadow: none;
+  text-shadow: none;
+  width: 50%; }
+
+.thank-you-modal-button:hover {
+  text-shadow: none;
+  box-shadow: none;
+  background-color: #ffffff;
+  border: solid #70b3cb 2px;
+  color: #70b3cb; }
+
+.single-story-modal-overlay {
   display: none;
   position: fixed;
   top: 0;
