--- a/themes/bix/sass/front-sections/_front-section-four.scss
+++ b/themes/bix/sass/front-sections/_front-section-four.scss
@@ -78,6 +78,7 @@
       margin-bottom:0px;
       display: block;
       max-width: 100%;
+      font-weight: 300;
     }
     .btn-discover{
       @include btn;
