--- a/themes/bix/sass/front-sections/_front-section-five.scss
+++ b/themes/bix/sass/front-sections/_front-section-five.scss
@@ -31,7 +31,7 @@
       font-family: $font__main;
       font-size: 1rem;
       line-height: 25px;
-      //max-width: 450px;
+      font-weight: 300;
       display: block;
       max-width: 100%;
     }
