--- a/themes/bix/sass/_about.scss
+++ b/themes/bix/sass/_about.scss
@@ -151,7 +151,7 @@ h3 {
 
 				li:before {   
 				    content: "";  
-				    border-color: transparent $color__orange;  
+				    border-color: transparent $color__gray;  
 				    border-style: solid;  
 				    border-width: 0.35em 0 0.35em 0.45em;  
 				    display: block;  
