--- a/themes/bix/style.css
+++ b/themes/bix/style.css
@@ -1078,7 +1078,7 @@ strong {
       line-height: 1.2rem; }
     .company-section-content-wrapper div ul li:before {
       content: "";
-      border-color: transparent #F9AC31;
+      border-color: transparent #444444;
       border-style: solid;
       border-width: 0.35em 0 0.35em 0.45em;
       display: block;
