--- a/themes/bix/sass/_footer.scss
+++ b/themes/bix/sass/_footer.scss
@@ -39,18 +39,18 @@ padding-left: 10px;
 }
 
 .form-position textarea {
-	margin-left: 1px;
 	width: 80%;
 	height: 40vh;
 	border: #F9AC31 solid 2px;
 	padding-left: 10px;
+	margin-bottom: 20px;
 }
 
 .footer_button {
  @include btn;
- font-size: 12px;
- width: 100px;
- padding: 5px;
+ font-size: 1rem;
+ width: 180px;
+ padding: 10px;
  text-align: center;
  box-shadow: none;
  text-shadow: none;
@@ -72,13 +72,17 @@ padding-left: 10px;
   
 	.fa-stack{
 		font-size: 1.8rem;
+		&:hover{
+			color:$color__blue;
+			cursor: pointer;
+		}
 	}
 
  }
 
 .icon-background {
-    color: white;
-}
+    color: #fff;
+	}
 
 .footer-orange {
 	color: $color__orange;
@@ -97,7 +101,7 @@ padding-left: 10px;
 	}
 	 .icons {
 	 	position: absolute;
-	 	bottom: 75px;
+	 	bottom: 100px;
 	 	left: 30px; 
 	 }
 }
@@ -105,12 +109,6 @@ padding-left: 10px;
 	.icons {
 	 	left: 35px; 
 	 }
-	.footer_button{
-		font-size: 1rem;
-		padding: 10px;
-		width: 185px;
-	 }
-	
 }
 @media #{$desktop}{
 
