--- a/themes/bix/style.css
+++ b/themes/bix/style.css
@@ -1255,6 +1255,7 @@ strong {
     background-color: #70b3cb;
     font-weight: 500;
     font-size: 1.1rem;
+    transition: all ease 0.4s;
     padding: 8px 46px;
     margin-bottom: 25px;
     font-weight: 300; }
@@ -1521,6 +1522,7 @@ strong {
     background-color: #70b3cb;
     font-weight: 500;
     font-size: 1.1rem;
+    transition: all ease 0.4s;
     padding: 8px 46px; }
     .sample-story-front .btn-download:hover {
       color: #70b3cb;
@@ -1616,6 +1618,7 @@ strong {
       background-color: #70b3cb;
       font-weight: 500;
       font-size: 1.1rem;
+      transition: all ease 0.4s;
       padding: 10px 80px;
       margin-top: 20px; }
       .home-book .book-summary .btn-discover:hover {
@@ -1763,6 +1766,7 @@ strong {
       background-color: #70b3cb;
       font-weight: 500;
       font-size: 1.1rem;
+      transition: all ease 0.4s;
       padding: 10px 80px; }
       .home-author .home-author-info .btn-explore:hover {
         color: #70b3cb;
@@ -2283,6 +2287,7 @@ strong {
       background-color: #70b3cb;
       font-weight: 500;
       font-size: 1.1rem;
+      transition: all ease 0.4s;
       padding: 10px 30px;
       display: block;
       text-align: center;
@@ -2556,6 +2561,7 @@ strong {
       background-color: #70b3cb;
       font-weight: 500;
       font-size: 1.1rem;
+      transition: all ease 0.4s;
       text-decoration: none;
       background-color: transparent;
       padding: 10px 20px;
@@ -2715,6 +2721,7 @@ strong {
       background-color: #70b3cb;
       font-weight: 500;
       font-size: 1.1rem;
+      transition: all ease 0.4s;
       padding: 10px 30px;
       width: 250px;
       text-transform: uppercase;
@@ -2867,6 +2874,7 @@ strong {
   background-color: #70b3cb;
   font-weight: 500;
   font-size: 1.1rem;
+  transition: all ease 0.4s;
   font-size: 1rem;
   width: 180px;
   padding: 10px;
@@ -3068,6 +3076,7 @@ strong {
   background-color: #70b3cb;
   font-weight: 500;
   font-size: 1.1rem;
+  transition: all ease 0.4s;
   padding: 10px 20px;
   text-transform: uppercase; }
   .btn-return:hover {
