--- a/themes/bix/sass/_about.scss
+++ b/themes/bix/sass/_about.scss
@@ -53,7 +53,7 @@ h3 {
 			text-align: center;
 			font-family: $font__header;
 			color: $color__gray;
-			font-size: 18px;
+			font-size: 1.5rem;
 			text-transform: uppercase;
 		}
 	}
@@ -126,7 +126,7 @@ h3 {
 			text-align: center;
 			font-family: $font__header;
 			color: $color__gray;
-			font-size: 18px;
+			font-size: 1.5rem;
 			text-transform: uppercase;
 		}
 	}
