--- a/themes/bix/style.css
+++ b/themes/bix/style.css
@@ -994,7 +994,7 @@ strong {
     text-align: center;
     font-family: "Titillium Web", sans-serif;
     color: #444444;
-    font-size: 18px;
+    font-size: 1.5rem;
     text-transform: uppercase; }
 
 .author-section-intro {
@@ -1057,7 +1057,7 @@ strong {
     text-align: center;
     font-family: "Titillium Web", sans-serif;
     color: #444444;
-    font-size: 18px;
+    font-size: 1.5rem;
     text-transform: uppercase; }
 
 .company-section-content-wrapper div {
