--- a/themes/bix/sass/_modal.scss
+++ b/themes/bix/sass/_modal.scss
@@ -72,6 +72,33 @@
 
 .comment-modal {
     background: $color__blue;
+
+    .comment-modal-wrapper {
+        display: flex;
+        align-items: center;
+        flex-flow: column nowrap;
+        width: 100%;
+        height: 100%;
+    }
+    h2 {
+        text-transform: uppercase;
+        color: white;
+        font-family: $font__header;
+        font-size: 2rem;
+        font-weight: 400;
+        border: 3px solid white;
+        border-width: 3px 0;
+    }
+    .img-wrapper {
+        width: 75%;
+        height: 50%;
+        background: white;
+    }
+    .comment-section-link {
+        @include btn;
+        padding: 0.5rem 3rem;
+        margin: 1rem;
+    }
 }
 
 .download-modal {
