--- a/themes/bix/style.css
+++ b/themes/bix/style.css
@@ -3253,7 +3253,38 @@ strong {
     padding: 1rem; }
 
 .highlight-modal {
+  text-align: center;
   background: #F9AC31; }
+  .highlight-modal .highlight-modal-image img {
+    width: 48%;
+    display: inline-block; }
+  .highlight-modal .highlight-modal-button {
+    color: #fff;
+    text-decoration: none;
+    border: solid #fff 2px;
+    border-radius: 30px;
+    background-color: #70b3cb;
+    font-weight: 500;
+    font-size: 1.1rem;
+    transition: all ease 0.4s;
+    padding: 0.5rem 3rem;
+    margin: 1rem; }
+    .highlight-modal .highlight-modal-button:hover {
+      color: #70b3cb;
+      border: solid #70b3cb 2px;
+      background-color: #fff; }
+  .highlight-modal .highlight-modal-title {
+    font-size: 2rem;
+    font-family: "Titillium Web", sans-serif;
+    color: #ffffff;
+    border-top: 2px white solid;
+    border-bottom: 2px white solid;
+    text-transform: capitalize; }
+  .highlight-modal .highlight-modal-paragraph {
+    color: #ffffff;
+    font-family: "Roboto", sans-serif;
+    font-size: .75rem;
+    text-transform: capitalize; }
 
 .comment-modal {
   background: #70b3cb; }
