--- a/themes/bix/sass/_modal.scss
+++ b/themes/bix/sass/_modal.scss
@@ -30,13 +30,20 @@
     text-align: center;
     background: $color__orange;
 
-    .highlight-modal-image {
+.highlight-modal-wrapper {
+  display: flex;
+  align-items: center;
+  width: 100%;
+  height: 100%;
+  flex-flow: column nowrap;
 
+
+    .highlight-modal-image {
+      
       img {
-      width: 48%;
-      display: inline-block;
+
       }
-}
+     }
 
     .highlight-modal-button{
       @include btn;
@@ -59,6 +66,8 @@
       font-size: .75rem;
       text-transform: capitalize;
     }
+}
+
 }
 
 .comment-modal {
